--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
     <h3>Good Day!</h3>
-    <p>This is for coursera testing.</p>
+    <p>This is for coursera testing.</p><br>
+    <p>This is a great course.</p>
 </body>
 
 </html>
