--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,26 @@
 <html>
 <head>
+    <meta charset="utf-8"/>
     <h1>Hello Coursera</h1>
 </head>
 <body>
     <h3>Good Day!</h3>
+    <div>
+        <p>
+            Modified
+        </p>
+    </div>
     <p>This is for coursera testing.</p><br>
-    <p>This is a great course.</p>
+    <p>Test Browser Sync</p>
+    <style>
+        p {
+            color: red;
+            text-align: justify;
+        }
+        h1 {
+            color:gray;
+            text-align: center;
+        }
+    </style>
 </body>
-
 </html>
